# hs-wrat

./: .gitignore  Makefile  README.md  Wrat.hs  wrat.cabal
src/: Wrat.hs
