Name:               Wrat
Description:        A program for wrapping and pretty-printing (extended)
                    Haskell type signatures.

Version:            0.0
Cabal-version:      >= 1.8
Build-type:         Simple

License:            AllRightsReserved
Copyright:          Will Jones
Homepage:           http://www.doc.ic.ac.uk/~wlj05

Executable wrat
  Build-depends:    base, fclabels >= 1.1.3, haskell-src-exts >= 1.11.1,
                      mtl >= 2.1.1, wl-pprint >= 1.0

  Main-is:          Wrat.hs
  Hs-source-dirs:   src
  Ghc-options:      -main-is Wrat
