Name:               wrat
Description:        A program for wrapping and pretty-printing (extended)
                    Haskell type signatures.

Version:            0.0
Cabal-Version:      >= 1.10
Build-Type:         Simple

License:            AllRightsReserved
Copyright:          Will Jones
Homepage:           http://www.doc.ic.ac.uk/~wlj05

Executable wrat
  Build-Depends:    base
                  , fclabels == 2.0.2.2
                  , haskell-src-exts
                  , mtl
                  , wl-pprint

  Default-Language: Haskell2010
  Main-Is:          Wrat.hs
  Hs-Source-Dirs:   src
  GHC-Options:      -main-is Wrat -O2
